fixes 2xl naming

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <body>
   <div class="custom-html">
-    <button id="BTN-1">1</button>
-    <button id="BTN-2">2</button>
+    <button id="btn1">1</button>
+    <button id="btn-no">2</button>
     <button id="BTN-3">3</button>
   </div>
 </body>
