--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <body>
   <div class="custom-html">
     <button id="btn1">1</button>
+    <button id="btn2">1</button>
+    <button id="btn3">1</button>
     <button id="btn-no">2</button>
     <button id="BTN-3">3</button>
   </div>
